welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: not found: value True
	if (estSurBiscuit()) {vuBiscuit=True}
                                        ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
	if (estSurBiscuit()) {vuBiscuit=True}
                                       ^Program:8: error: not found: value True
			if (estSurBiscuit()) {vuBiscuit=True};
                                                        ^Program:10: error: type mismatch;
 found   : Unit
 required: Boolean
		for (x<-1 to 6) {
                      ^